deploy: 5c37eae5b25212f7888d3d494182402f167993bc

--- a/20211013230422-kubectl.html
+++ b/20211013230422-kubectl.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-10-10 Tue 11:49 -->
+<!-- 2024-01-19 Fri 02:45 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>kubectl</title>
@@ -258,9 +258,9 @@ for the JavaScript code in this tag.
 :ID:       ee377537-0c8d-48c9-a181-19a2cff8c4a7
 </p>
 
-<div id="outline-container-orga2fd25a" class="outline-2">
-<h2 id="orga2fd25a">Commands</h2>
-<div class="outline-text-2" id="text-orga2fd25a">
+<div id="outline-container-orgd4da1b1" class="outline-2">
+<h2 id="orgd4da1b1">Commands</h2>
+<div class="outline-text-2" id="text-orgd4da1b1">
 <ul class="org-ul">
 <li>View cluster information</li>
 </ul>
@@ -270,9 +270,9 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-org0d01377" class="outline-3">
-<h3 id="org0d01377">Apply &amp; Create</h3>
-<div class="outline-text-3" id="text-org0d01377">
+<div id="outline-container-org965ea0f" class="outline-3">
+<h3 id="org965ea0f">Apply &amp; Create</h3>
+<div class="outline-text-3" id="text-org965ea0f">
 <ul class="org-ul">
 <li>Just creates a resource</li>
 </ul>
@@ -293,9 +293,9 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-orgd9b9a37" class="outline-3">
-<h3 id="orgd9b9a37">Delete</h3>
-<div class="outline-text-3" id="text-orgd9b9a37">
+<div id="outline-container-orgee37b48" class="outline-3">
+<h3 id="orgee37b48">Delete</h3>
+<div class="outline-text-3" id="text-orgee37b48">
 <p>
 Deleting a pod won't prevent it from being recreated.
 </p>
@@ -313,9 +313,9 @@ you need to delete it's <code>deployment</code>.
 </div>
 </div>
 
-<div id="outline-container-org2f65560" class="outline-3">
-<h3 id="org2f65560">Describe</h3>
-<div class="outline-text-3" id="text-org2f65560">
+<div id="outline-container-org62b715d" class="outline-3">
+<h3 id="org62b715d">Describe</h3>
+<div class="outline-text-3" id="text-org62b715d">
 <div class="org-src-container">
 <pre class="src src-shell">kubectl describe pods &lt;...&gt;
 </pre>
@@ -323,9 +323,9 @@ you need to delete it's <code>deployment</code>.
 </div>
 </div>
 
-<div id="outline-container-org552ff7f" class="outline-3">
-<h3 id="org552ff7f">Get</h3>
-<div class="outline-text-3" id="text-org552ff7f">
+<div id="outline-container-orgc38f0c7" class="outline-3">
+<h3 id="orgc38f0c7">Get</h3>
+<div class="outline-text-3" id="text-orgc38f0c7">
 <ul class="org-ul">
 <li>View all the resources</li>
 </ul>
@@ -356,9 +356,9 @@ kubectl get deployment -l app=nginx
 </div>
 </div>
 
-<div id="outline-container-org2b47741" class="outline-3">
-<h3 id="org2b47741">Port-forward</h3>
-<div class="outline-text-3" id="text-org2b47741">
+<div id="outline-container-org7685840" class="outline-3">
+<h3 id="org7685840">Port-forward</h3>
+<div class="outline-text-3" id="text-org7685840">
 <ul class="org-ul">
 <li>Forward port to enables external calls</li>
 </ul>
@@ -372,13 +372,13 @@ kubectl port-forward [pod-name] 8080:80
 </div>
 </div>
 
-<div id="outline-container-orgde5c387" class="outline-2">
-<h2 id="orgde5c387">YAML</h2>
-<div class="outline-text-2" id="text-orgde5c387">
+<div id="outline-container-orgdcf33a8" class="outline-2">
+<h2 id="orgdcf33a8">YAML</h2>
+<div class="outline-text-2" id="text-orgdcf33a8">
 </div>
-<div id="outline-container-org9df8e24" class="outline-3">
-<h3 id="org9df8e24">Pod</h3>
-<div class="outline-text-3" id="text-org9df8e24">
+<div id="outline-container-orgcfc36b9" class="outline-3">
+<h3 id="orgcfc36b9">Pod</h3>
+<div class="outline-text-3" id="text-orgcfc36b9">
 <div class="org-src-container">
 <pre class="src src-yaml">apiVersion: v1
 kind: Pod
@@ -397,9 +397,9 @@ spec:
 </div>
 </div>
 
-<div id="outline-container-org5907d9c" class="outline-4">
-<h4 id="org5907d9c">Pod Healthchecks</h4>
-<div class="outline-text-4" id="text-org5907d9c">
+<div id="outline-container-org01ee0ed" class="outline-4">
+<h4 id="org01ee0ed">Pod Healthchecks</h4>
+<div class="outline-text-4" id="text-org01ee0ed">
 <ul class="org-ul">
 <li>Probe Types
 <ul class="org-ul">
@@ -457,7 +457,7 @@ spec:
 </div>
 </div>
 <div id="postamble" class="status">
-<div class="footer"> Last updated 2023-10-10 Tue 11:49.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
+<div class="footer"> Last updated 2024-01-19 Fri 02:45.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
 </div>
 </body>
 </html>
