--- a/20211107141903-the_effective_manager.html
+++ b/20211107141903-the_effective_manager.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-10-10 Tue 11:49 -->
+<!-- 2024-01-19 Fri 02:45 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>The-Effective-Manager</title>
@@ -258,9 +258,9 @@ for the JavaScript code in this tag.
 :ID:       32b2fe5a-3bc3-439b-a850-70a539498e9e
 </p>
 
-<div id="outline-container-orgd6df5ac" class="outline-2">
-<h2 id="orgd6df5ac">Teachable and Sustainable Skills</h2>
-<div class="outline-text-2" id="text-orgd6df5ac">
+<div id="outline-container-orgc0cea3f" class="outline-2">
+<h2 id="orgc0cea3f">Teachable and Sustainable Skills</h2>
+<div class="outline-text-2" id="text-orgc0cea3f">
 <blockquote>
 <p>
 However you manage, your techniques, behavior, and philosophy must be both
@@ -320,9 +320,9 @@ others. And the effective manager can repeat the
 </div>
 </div>
 
-<div id="outline-container-org769c1e8" class="outline-2">
-<h2 id="org769c1e8">Know Your People: One On Ones</h2>
-<div class="outline-text-2" id="text-org769c1e8">
+<div id="outline-container-orga3f015b" class="outline-2">
+<h2 id="orga3f015b">Know Your People: One On Ones</h2>
+<div class="outline-text-2" id="text-orga3f015b">
 <p>
 One on ones are meetings that:
 </p>
@@ -337,9 +337,9 @@ One on ones are meetings that:
 </ol>
 </div>
 
-<div id="outline-container-orgd97c4e5" class="outline-3">
-<h3 id="orgd97c4e5">Scheduling</h3>
-<div class="outline-text-3" id="text-orgd97c4e5">
+<div id="outline-container-orge12b24c" class="outline-3">
+<h3 id="orge12b24c">Scheduling</h3>
+<div class="outline-text-3" id="text-orge12b24c">
 <blockquote>
 <p>
 Scheduling your O3s is actually more important than having them weekly. That's
@@ -378,9 +378,9 @@ manager: your time. Build an organization of effective managers
 </div>
 </div>
 
-<div id="outline-container-org1cecb26" class="outline-2">
-<h2 id="org1cecb26">Talk about performance - Feedback</h2>
-<div class="outline-text-2" id="text-org1cecb26">
+<div id="outline-container-orgde2007f" class="outline-2">
+<h2 id="orgde2007f">Talk about performance - Feedback</h2>
+<div class="outline-text-2" id="text-orgde2007f">
 <blockquote>
 <p>
 The second critical manager behavior that leads to results and retention is
@@ -406,9 +406,9 @@ Their defensiveness, then, should not be surprising.
 </blockquote>
 </div>
 
-<div id="outline-container-orgd18a1b0" class="outline-3">
-<h3 id="orgd18a1b0">Encourage Effective Future Behavior</h3>
-<div class="outline-text-3" id="text-orgd18a1b0">
+<div id="outline-container-org071842d" class="outline-3">
+<h3 id="org071842d">Encourage Effective Future Behavior</h3>
+<div class="outline-text-3" id="text-org071842d">
 <blockquote>
 <p>
 The moment you switch to a future focus, however, you free yourself up to focus
@@ -503,9 +503,9 @@ forgiven it. Remember that our focus is on the future, not the past</b>.
 </div>
 </div>
 
-<div id="outline-container-orgd14ee7b" class="outline-3">
-<h3 id="orgd14ee7b">When should I give feedback</h3>
-<div class="outline-text-3" id="text-orgd14ee7b">
+<div id="outline-container-orgd3a7c0d" class="outline-3">
+<h3 id="orgd3a7c0d">When should I give feedback</h3>
+<div class="outline-text-3" id="text-orgd3a7c0d">
 <p>
 Feedbacks should be given as early and often as possible, if you can give
 feedback right after noticing positive/negative behaviour that's ideal, of
@@ -529,21 +529,21 @@ like attention.</li>
 </div>
 </div>
 
-<div id="outline-container-org41bc082" class="outline-2">
-<h2 id="org41bc082">Common Questions and Resistance to Feedback</h2>
-<div class="outline-text-2" id="text-org41bc082">
+<div id="outline-container-org8387c8e" class="outline-2">
+<h2 id="org8387c8e">Common Questions and Resistance to Feedback</h2>
+<div class="outline-text-2" id="text-org8387c8e">
 <p>
 First, ask yourself these three questions before offering feedback.
 </p>
 </div>
 
-<div id="outline-container-org06d05b5" class="outline-3">
-<h3 id="org06d05b5">The questions</h3>
-<div class="outline-text-3" id="text-org06d05b5">
+<div id="outline-container-orgb3b63b2" class="outline-3">
+<h3 id="orgb3b63b2">The questions</h3>
+<div class="outline-text-3" id="text-orgb3b63b2">
 </div>
-<div id="outline-container-org6315e5b" class="outline-4">
-<h4 id="org6315e5b">Am I angry?</h4>
-<div class="outline-text-4" id="text-org6315e5b">
+<div id="outline-container-orgfb2c72b" class="outline-4">
+<h4 id="orgfb2c72b">Am I angry?</h4>
+<div class="outline-text-4" id="text-orgfb2c72b">
 <blockquote>
 <p>
 If you're angry, don't give feedback. Period.
@@ -552,18 +552,18 @@ If you're angry, don't give feedback. Period.
 </div>
 </div>
 
-<div id="outline-container-orgb50fc91" class="outline-4">
-<h4 id="orgb50fc91">Do I want to remind or punish?</h4>
-<div class="outline-text-4" id="text-orgb50fc91">
+<div id="outline-container-orga568f1f" class="outline-4">
+<h4 id="orga568f1f">Do I want to remind or punish?</h4>
+<div class="outline-text-4" id="text-orga568f1f">
 <p>
 Always focus in encouraging effective future behavior.
 </p>
 </div>
 </div>
 
-<div id="outline-container-org51dd749" class="outline-4">
-<h4 id="org51dd749">Can I let it go?</h4>
-<div class="outline-text-4" id="text-org51dd749">
+<div id="outline-container-org8e4e0dd" class="outline-4">
+<h4 id="org8e4e0dd">Can I let it go?</h4>
+<div class="outline-text-4" id="text-org8e4e0dd">
 <blockquote>
 <p>
 If you can't let it go in terms of how you feel, we recommend that you do let it
@@ -573,9 +573,9 @@ go by not giving negative feedback.
 </div>
 </div>
 
-<div id="outline-container-org9318fac" class="outline-4">
-<h4 id="org9318fac">Maybe delay or defer?</h4>
-<div class="outline-text-4" id="text-org9318fac">
+<div id="outline-container-org3d1c5bc" class="outline-4">
+<h4 id="org3d1c5bc">Maybe delay or defer?</h4>
+<div class="outline-text-4" id="text-org3d1c5bc">
 <p>
 If you can't pass the three tests above, you should either <b>delay</b> or <b>defer</b>.
 </p>
@@ -590,9 +590,9 @@ again.</li>
 </div>
 </div>
 
-<div id="outline-container-org90182c7" class="outline-4">
-<h4 id="org90182c7">The Shot across the Bow</h4>
-<div class="outline-text-4" id="text-org90182c7">
+<div id="outline-container-org37b7620" class="outline-4">
+<h4 id="org37b7620">The Shot across the Bow</h4>
+<div class="outline-text-4" id="text-org37b7620">
 <p>
 What do I do if one of my directs pushes back or refuses feedback? If your
 direct is defensive it means they likely know they're in the wrong. Do not drag
@@ -609,9 +609,9 @@ apologize, and walk away. You've made your point.
 </div>
 </div>
 
-<div id="outline-container-orgab14ca7" class="outline-3">
-<h3 id="orgab14ca7">The capstone: systemic feedback</h3>
-<div class="outline-text-3" id="text-orgab14ca7">
+<div id="outline-container-orgf252e52" class="outline-3">
+<h3 id="orgf252e52">The capstone: systemic feedback</h3>
+<div class="outline-text-3" id="text-orgf252e52">
 <blockquote>
 <p>
 Systemic feedback changes what you are talking to your direct about and raises
@@ -634,9 +634,9 @@ don't keep.
 </blockquote>
 </div>
 
-<div id="outline-container-orgd63673f" class="outline-4">
-<h4 id="orgd63673f">When to use it?</h4>
-<div class="outline-text-4" id="text-orgd63673f">
+<div id="outline-container-org317606f" class="outline-4">
+<h4 id="org317606f">When to use it?</h4>
+<div class="outline-text-4" id="text-org317606f">
 <blockquote>
 <p>
 You should use systemic feedback when you have already given six instances of
@@ -647,18 +647,18 @@ has not been engaging in the behavior they've committed to.
 </div>
 </div>
 
-<div id="outline-container-org01abd0d" class="outline-4">
-<h4 id="org01abd0d">How is it different?</h4>
-<div class="outline-text-4" id="text-org01abd0d">
+<div id="outline-container-orgcf27d8d" class="outline-4">
+<h4 id="orgcf27d8d">How is it different?</h4>
+<div class="outline-text-4" id="text-orgcf27d8d">
 <p>
 In systemic feedbacks you're giving feedback on <b>the failure to meet commitments</b>.
 </p>
 </div>
 </div>
 
-<div id="outline-container-org5c6cf35" class="outline-4">
-<h4 id="org5c6cf35">Two dangers</h4>
-<div class="outline-text-4" id="text-org5c6cf35">
+<div id="outline-container-orga0c31c8" class="outline-4">
+<h4 id="orga0c31c8">Two dangers</h4>
+<div class="outline-text-4" id="text-orga0c31c8">
 <ol class="org-ol">
 <li>Use the standard feedback model before applying the systemic feedback</li>
 <li>Implied sanctions must be delivered</li>
@@ -668,13 +668,13 @@ In systemic feedbacks you're giving feedback on <b>the failure to meet commitmen
 </div>
 </div>
 
-<div id="outline-container-org508f0d7" class="outline-2">
-<h2 id="org508f0d7">How to start giving feedback</h2>
-<div class="outline-text-2" id="text-org508f0d7">
+<div id="outline-container-org496001e" class="outline-2">
+<h2 id="org496001e">How to start giving feedback</h2>
+<div class="outline-text-2" id="text-org496001e">
 </div>
-<div id="outline-container-orgffc2993" class="outline-3">
-<h3 id="orgffc2993">Announce your intention in your weekly staff meeting</h3>
-<div class="outline-text-3" id="text-orgffc2993">
+<div id="outline-container-orgfc051ce" class="outline-3">
+<h3 id="orgfc051ce">Announce your intention in your weekly staff meeting</h3>
+<div class="outline-text-3" id="text-orgfc051ce">
 <blockquote>
 <p>
 Cover the purpose of feedback talk to your directs about the purpose of giving
@@ -689,9 +689,9 @@ feedback model</li>
 </div>
 </div>
 
-<div id="outline-container-org6f87fd2" class="outline-3">
-<h3 id="org6f87fd2">Give only positive feedback for eigth weeks</h3>
-<div class="outline-text-3" id="text-org6f87fd2">
+<div id="outline-container-org68fe0a0" class="outline-3">
+<h3 id="org68fe0a0">Give only positive feedback for eigth weeks</h3>
+<div class="outline-text-3" id="text-org68fe0a0">
 <blockquote>
 <p>
 Don't give any negative feedback as you're learning to use the feedback
@@ -708,9 +708,9 @@ hurt the feelings of your direct.
 </div>
 </div>
 
-<div id="outline-container-org19ceda2" class="outline-3">
-<h3 id="org19ceda2">Stay as positive as you can</h3>
-<div class="outline-text-3" id="text-org19ceda2">
+<div id="outline-container-org86a2c0b" class="outline-3">
+<h3 id="org86a2c0b">Stay as positive as you can</h3>
+<div class="outline-text-3" id="text-org86a2c0b">
 <ul class="org-ul">
 <li>Don't overdo negative feedbacks</li>
 <li>Positive feedbacks are much more powerful tools than negative ones</li>
@@ -727,9 +727,9 @@ all the good behaviors.
 </div>
 </div>
 
-<div id="outline-container-org71ce2fd" class="outline-2">
-<h2 id="org71ce2fd">Push work down - Delegation</h2>
-<div class="outline-text-2" id="text-org71ce2fd">
+<div id="outline-container-orgf741363" class="outline-2">
+<h2 id="orgf741363">Push work down - Delegation</h2>
+<div class="outline-text-2" id="text-orgf741363">
 <blockquote>
 <p>
 Learning to delegate is part of the transition to becoming an executive. Too
@@ -744,9 +744,9 @@ How do we know when something is a task assignment and not a delegation?
 </p>
 </div>
 
-<div id="outline-container-org515371d" class="outline-4">
-<h4 id="org515371d">Task assignment x Task delegation</h4>
-<div class="outline-text-4" id="text-org515371d">
+<div id="outline-container-org484125c" class="outline-4">
+<h4 id="org484125c">Task assignment x Task delegation</h4>
+<div class="outline-text-4" id="text-org484125c">
 <blockquote>
 <p>
 Delegation, on the other hand, is you turning over responsibility for one of
@@ -757,13 +757,13 @@ long standing basis, to one of your directs.
 </div>
 </div>
 
-<div id="outline-container-org9aa7f9d" class="outline-4">
-<h4 id="org9aa7f9d">Why Delegation Is the Solution - The Delegation</h4>
+<div id="outline-container-org2fb8c5a" class="outline-4">
+<h4 id="org2fb8c5a">Why Delegation Is the Solution - The Delegation</h4>
 </div>
 
-<div id="outline-container-org4cf89e2" class="outline-4">
-<h4 id="org4cf89e2">Delegate the Big Black Ball</h4>
-<div class="outline-text-4" id="text-org4cf89e2">
+<div id="outline-container-org709e9ef" class="outline-4">
+<h4 id="org709e9ef">Delegate the Big Black Ball</h4>
+<div class="outline-text-4" id="text-org709e9ef">
 <ul class="org-ul">
 <li>Not a good idea, since you <b>don't</b> know how to do it, how are you going to
 help your directs to do it?</li>
@@ -779,9 +779,9 @@ your directs. Learn it first, master it, before
 </div>
 </div>
 
-<div id="outline-container-org9738c2d" class="outline-4">
-<h4 id="org9738c2d">Delegate One of the Big Gray Balls</h4>
-<div class="outline-text-4" id="text-org9738c2d">
+<div id="outline-container-org64e7267" class="outline-4">
+<h4 id="org64e7267">Delegate One of the Big Gray Balls</h4>
+<div class="outline-text-4" id="text-org64e7267">
 <blockquote>
 <p>
 One of your small balls is a big ball to your direct.
@@ -795,13 +795,13 @@ task anyway.</li>
 </div>
 </div>
 
-<div id="outline-container-orgf793bf0" class="outline-4">
-<h4 id="orgf793bf0">Delegate One or More of the Small Balls</h4>
+<div id="outline-container-orgb0483af" class="outline-4">
+<h4 id="orgb0483af">Delegate One or More of the Small Balls</h4>
 </div>
 
-<div id="outline-container-org5034882" class="outline-3">
-<h3 id="org5034882">How to Delegate—The Manager Tools Delegation Model</h3>
-<div class="outline-text-3" id="text-org5034882">
+<div id="outline-container-org1b6bcbb" class="outline-3">
+<h3 id="org1b6bcbb">How to Delegate—The Manager Tools Delegation Model</h3>
+<div class="outline-text-3" id="text-org1b6bcbb">
 <ol class="org-ol">
 <li>State your desire for help</li>
 <li>Tell them why you're asking them</li>
@@ -814,7 +814,7 @@ task anyway.</li>
 </div>
 </div>
 <div id="postamble" class="status">
-<div class="footer"> Last updated 2023-10-10 Tue 11:49.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
+<div class="footer"> Last updated 2024-01-19 Fri 02:45.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
 </div>
 </body>
 </html>
