--- a/20211208202505-kubernetes_ingress.html
+++ b/20211208202505-kubernetes_ingress.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-10-10 Tue 11:49 -->
+<!-- 2024-01-19 Fri 02:45 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Kubernetes-Ingress</title>
@@ -258,9 +258,9 @@ for the JavaScript code in this tag.
 :ID:       bd5dba58-0dd8-4b89-aabb-8bd49ed8c27c
 </p>
 
-<div id="outline-container-orgca966fe" class="outline-2">
-<h2 id="orgca966fe">What is an Ingress Controller?</h2>
-<div class="outline-text-2" id="text-orgca966fe">
+<div id="outline-container-org05ad2c7" class="outline-2">
+<h2 id="org05ad2c7">What is an Ingress Controller?</h2>
+<div class="outline-text-2" id="text-org05ad2c7">
 <ul class="org-ul">
 <li>Opens the cluster to receive traffic from the external world</li>
 <li>Routes traffic to the backend services</li>
@@ -269,7 +269,7 @@ for the JavaScript code in this tag.
 </div>
 </div>
 <div id="postamble" class="status">
-<div class="footer"> Last updated 2023-10-10 Tue 11:49.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
+<div class="footer"> Last updated 2024-01-19 Fri 02:45.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
 </div>
 </body>
 </html>
