--- a/20231005194145-algebraic_models_for_accounting_systems.html
+++ b/20231005194145-algebraic_models_for_accounting_systems.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-10-10 Tue 11:49 -->
+<!-- 2024-01-19 Fri 02:45 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Algebraic Models for Accounting Systems</title>
@@ -283,13 +283,13 @@ for the JavaScript code in this tag.
 Algebraic Models for Accouting Systems
 </p>
 
-<div id="outline-container-orgd1abdbc" class="outline-2">
-<h2 id="orgd1abdbc">Approaches to Accounting Theory</h2>
-<div class="outline-text-2" id="text-orgd1abdbc">
+<div id="outline-container-org7c04ffa" class="outline-2">
+<h2 id="org7c04ffa">Approaches to Accounting Theory</h2>
+<div class="outline-text-2" id="text-org7c04ffa">
 </div>
-<div id="outline-container-orgd815bf5" class="outline-3">
-<h3 id="orgd815bf5">Algebraic concepts employed</h3>
-<div class="outline-text-3" id="text-orgd815bf5">
+<div id="outline-container-orgd716d64" class="outline-3">
+<h3 id="orgd716d64">Algebraic concepts employed</h3>
+<div class="outline-text-3" id="text-orgd716d64">
 <ul class="org-ul">
 <li>Balance vectors
 <ul class="org-ul">
@@ -316,13 +316,13 @@ outputs are the new balance vectors.</li>
 </div>
 </div>
 
-<div id="outline-container-org7495405" class="outline-2">
-<h2 id="org7495405">Balance Vectors</h2>
-<div class="outline-text-2" id="text-org7495405">
+<div id="outline-container-org8d77b6d" class="outline-2">
+<h2 id="org8d77b6d">Balance Vectors</h2>
+<div class="outline-text-2" id="text-org8d77b6d">
 </div>
-<div id="outline-container-orgcc3c472" class="outline-3">
-<h3 id="orgcc3c472">The values of an account</h3>
-<div class="outline-text-3" id="text-orgcc3c472">
+<div id="outline-container-org37307d8" class="outline-3">
+<h3 id="org37307d8">The values of an account</h3>
+<div class="outline-text-3" id="text-org37307d8">
 <p>
 Let there be given a set R together with two binary operations on R called
 addition and multiplication, denoted in the usual way, such that the following
@@ -370,9 +370,9 @@ a,b \in R \wedge a \times b = 0 \implies a = 0 &\lor b = 0 \tag{12}\\
 </div>
 </div>
 
-<div id="outline-container-org94a8a8d" class="outline-3">
-<h3 id="org94a8a8d">The State of an Accounting System</h3>
-<div class="outline-text-3" id="text-org94a8a8d">
+<div id="outline-container-org9eada4e" class="outline-3">
+<h3 id="org9eada4e">The State of an Accounting System</h3>
+<div class="outline-text-3" id="text-org9eada4e">
 <p>
 Let <b>R</b> be an <b>ordered domain</b>, which will be the universal set for all account
 values, and let n be a positive integer, which will be the number of accounts in
@@ -455,9 +455,9 @@ the additional properties (5) through (8) make R<sup>n</sup> into a .
 </p>
 </div>
 
-<div id="outline-container-orgfa04867" class="outline-4">
-<h4 id="orgfa04867">The free R-module R<sup>n</sup></h4>
-<div class="outline-text-4" id="text-orgfa04867">
+<div id="outline-container-org7769ace" class="outline-4">
+<h4 id="org7769ace">The free R-module R<sup>n</sup></h4>
+<div class="outline-text-4" id="text-org7769ace">
 <p>
 It turns out that R<sup>n</sup> is a particular type of R-module called a Free R-module. To
 see what is special about it, consider the so-called elementary column vectors
@@ -504,9 +504,9 @@ The set of elementary vectors {e(1), . . . , e(n)} is an R-basis of R<sup>n</sup
 </div>
 </div>
 
-<div id="outline-container-orgde73c80" class="outline-4">
-<h4 id="orgde73c80">Balance vectors in R<sup>n</sup></h4>
-<div class="outline-text-4" id="text-orgde73c80">
+<div id="outline-container-orge92aa17" class="outline-4">
+<h4 id="orge92aa17">Balance vectors in R<sup>n</sup></h4>
+<div class="outline-text-4" id="text-orge92aa17">
 <p>
 The accounts of a company generally fall into three categories:
 </p>
@@ -570,14 +570,14 @@ balance module of degree n over R.
 </div>
 </div>
 
-<div id="outline-container-org00c9329" class="outline-4">
-<h4 id="org00c9329">Properties of the Balance Module</h4>
+<div id="outline-container-org3849031" class="outline-4">
+<h4 id="org3849031">Properties of the Balance Module</h4>
 </div>
 </div>
 </div>
 </div>
 <div id="postamble" class="status">
-<div class="footer"> Last updated 2023-10-10 Tue 11:49.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
+<div class="footer"> Last updated 2024-01-19 Fri 02:45.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
 </div>
 </body>
 </html>
