--- a/20211201115324-gitops.html
+++ b/20211201115324-gitops.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-10-10 Tue 11:49 -->
+<!-- 2024-01-19 Fri 02:45 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>GitOps</title>
@@ -258,9 +258,9 @@ for the JavaScript code in this tag.
 :ID:       e670c5d9-8238-4bf4-a916-e9ffb3097fa1
 </p>
 
-<div id="outline-container-org06d92c1" class="outline-2">
-<h2 id="org06d92c1">Architecture Components</h2>
-<div class="outline-text-2" id="text-org06d92c1">
+<div id="outline-container-org61965c0" class="outline-2">
+<h2 id="org61965c0">Architecture Components</h2>
+<div class="outline-text-2" id="text-org61965c0">
 <table>
 
 
@@ -306,13 +306,13 @@ for the JavaScript code in this tag.
 </div>
 
 
-<div id="outline-container-org73455af" class="outline-2">
-<h2 id="org73455af">ArgoCD</h2>
-<div class="outline-text-2" id="text-org73455af">
+<div id="outline-container-orgf5b1f83" class="outline-2">
+<h2 id="orgf5b1f83">ArgoCD</h2>
+<div class="outline-text-2" id="text-orgf5b1f83">
 </div>
-<div id="outline-container-orgf1c8fce" class="outline-3">
-<h3 id="orgf1c8fce">Architecture</h3>
-<div class="outline-text-3" id="text-orgf1c8fce">
+<div id="outline-container-org5404b0a" class="outline-3">
+<h3 id="org5404b0a">Architecture</h3>
+<div class="outline-text-3" id="text-org5404b0a">
 <ul class="org-ul">
 <li><p>
 API Server
@@ -344,7 +344,7 @@ the cluster with the desired state of the Git repository.
 </div>
 </div>
 <div id="postamble" class="status">
-<div class="footer"> Last updated 2023-10-10 Tue 11:49.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
+<div class="footer"> Last updated 2024-01-19 Fri 02:45.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
 </div>
 </body>
 </html>
