--- a/20220204231800-mandarin_chinese.html
+++ b/20220204231800-mandarin_chinese.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-10-10 Tue 11:49 -->
+<!-- 2024-01-19 Fri 02:45 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>mandarin-chinese</title>
@@ -261,18 +261,18 @@ for the JavaScript code in this tag.
 Notes from the following courses:
 </p>
 
-<div id="outline-container-orgd628fa3" class="outline-2">
-<h2 id="orgd628fa3">Basic Mandarin</h2>
-<div class="outline-text-2" id="text-orgd628fa3">
+<div id="outline-container-org68af0ee" class="outline-2">
+<h2 id="org68af0ee">Basic Mandarin</h2>
+<div class="outline-text-2" id="text-org68af0ee">
 <ul class="org-ul">
 <li><a href="https://www.coursera.org/learn/mandarin-chinese-1">Mandarin Chinese 1</a></li>
 <li>Basic Mandarin at CII</li>
 </ul>
 </div>
 
-<div id="outline-container-orgc6f8f69" class="outline-3">
-<h3 id="orgc6f8f69">Pictograms</h3>
-<div class="outline-text-3" id="text-orgc6f8f69">
+<div id="outline-container-orgdc38de8" class="outline-3">
+<h3 id="orgdc38de8">Pictograms</h3>
+<div class="outline-text-3" id="text-orgdc38de8">
 <table>
 
 
@@ -313,9 +313,9 @@ Notes from the following courses:
 </div>
 
 
-<div id="outline-container-org95a1604" class="outline-3">
-<h3 id="org95a1604">Useful words</h3>
-<div class="outline-text-3" id="text-org95a1604">
+<div id="outline-container-orga574665" class="outline-3">
+<h3 id="orga574665">Useful words</h3>
+<div class="outline-text-3" id="text-orga574665">
 <table>
 
 
@@ -413,7 +413,7 @@ Notes from the following courses:
 </div>
 </div>
 <div id="postamble" class="status">
-<div class="footer"> Last updated 2023-10-10 Tue 11:49.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
+<div class="footer"> Last updated 2024-01-19 Fri 02:45.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
 </div>
 </body>
 </html>
