--- a/README.html
+++ b/README.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-10-10 Tue 11:49 -->
+<!-- 2024-01-19 Fri 02:45 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Stranger in a strange λ</title>
@@ -254,15 +254,15 @@ for the JavaScript code in this tag.
 <div id="content">
 <header>
 <h1 class="title">Stranger in a strange λ</h1>
-</header><div id="outline-container-orgf681883" class="outline-2">
-<h2 id="orgf681883">Organon</h2>
-<div class="outline-text-2" id="text-orgf681883">
+</header><div id="outline-container-org4b94fcd" class="outline-2">
+<h2 id="org4b94fcd">Organon</h2>
+<div class="outline-text-2" id="text-org4b94fcd">
 <a href="https://github.com/mtrsk/Organon/actions/workflows/docker-emacs.yml/badge.svg"> <img alt="pipeline status" src="https://github.com/mtrsk/Organon/actions/workflows/docker-emacs.yml/badge.svg" /></a>
 </div>
 </div>
 </div>
 <div id="postamble" class="status">
-<div class="footer"> Last updated 2023-10-10 Tue 11:49.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
+<div class="footer"> Last updated 2024-01-19 Fri 02:45.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
 </div>
 </body>
 </html>
